<resources>
    <string name="app_name">Map Matching</string>
    <string name="activityMapMatching">Secondo Map Matching</string>
    <string name="activitySettingsGeneral">General Settings</string>
    <string name="activitySettingsServer">Server Settings</string>
    <string name="activitySettingsAdvanced">Advanced Settings</string>
    <string name="activitySettingsGps">GPS Settings</string>
    <string name="activityMapMatchingButtonStart">Start Map Matching</string>
    <string name="activityMapMatchingButtonStop">Stop Map Matching</string>
    <string name="activityMapMatchingTabMap">Map</string>
    <string name="activityMapMatchingTabMapDisabled">Map Disabled</string>
    <string name="activityMapMatchingTabConsole">Console</string>
    <string name="activityMapMatchingTabOverview">Overview</string>
    <string name="activityOverviewStreetnames">Recent Streetnames</string>
    <string name="activityOverviewDirections">Recent Directions</string>
    <string name="activityOverviewSpeed">Recent Speed</string>
    <string name="activityOverviewHeight">Recent Height</string>
    <string name="menuSettingsGeneral">General Settings</string>
    <string name="menuSettingsServer">Server Settings</string>
    <string name="menuSettingsGps">GPS Settings</string>
    <string name="menuSettingsAdvanced">Advanced Settings</string>
    <string name="menuReset">Reset Data</string>
    <string name="menuHideMapOptions">Hide Map Options</string>
    <string name="menuHideMapLabels">Hide Map Labels</string>
    <string name="menuShowMapOptions">Show Map Options</string>
    <string name="menuShowMapLabels">Show Map Labels</string>
    <string name="menuExitApp">Exit</string>
    <string name="preferenceCategory_server">Secondo Server</string>
    <string name="preferenceCategory_serverWayData">Secondo Server Way Data</string>
    <string name="preferenceCategory_serverTimeout">Timeout</string>
    <string name="preferenceCategory_serverResultServer">Secondo Result Server</string>
    <string name="preferenceCategory_mapMatching">Map Matching</string>
    <string name="preferenceCategory_map">Map</string>
    <string name="preferenceCategory_symbolicTrajectories">Symbolic Trajectories</string>
    <string name="preferenceCategory_movementData">Movement Data</string>
    <string name="preferenceCategory_advancedUTurn">(U-)Turns</string>
    <string name="preferenceCategory_advancedHypothesis">Hypotheses</string>
    <string name="preferenceCategory_advancedExtensions">Extensions</string>
    <string name="preferenceCategory_advancedNetwork">Network Updates</string>
    <string name="preferenceCategory_advancedReset">Reset</string>
    <string name="preferenceCategory_advancedMatchingFootways">Matching Footways</string>
    <string name="preferenceCategory_advancedClean">Clean Hypotheses</string>
    <string name="preferenceCategory_advancedCleanMap">Clean Map</string>
    <string name="preferenceCategory_advancedScore">Score</string>
    <string name="preferenceCategory_gps">GPS</string>
    <string name="preferenceCategory_gpsFirstLocation">First Location Point</string>
    <string name="preferenceCategory_gpsReset">Reset</string>
    <string name="preferenceCategory_gpsDop">Dilution of Precision (DOP) Filter</string>
    <string name="preferenceCategory_results">Results</string>
    <string name="preference_serverIp">Server Address</string>
    <string name="preference_serverIp_key">serverIp</string>
    <string name="preference_serverResultIp_key">serverResultIp</string>
    <string name="preference_serverResultIp_default">127.0.0.1</string>
    <string name="preference_serverIp_default">127.0.0.1</string>
    <string name="preference_serverPort">Server Port</string>
    <string name="preference_serverPort_key">serverPort</string>
    <string name="preference_serverResultPort_key">serverResultPort</string>
    <string name="preference_serverPort_default">1234</string>
    <string name="preference_serverUsername">Username</string>
    <string name="preference_serverUsername_key">serverUsername</string>
    <string name="preference_serverResultUsername_key">serverResultUsername</string>
    <string name="preference_serverUsername_default"></string>
    <string name="preference_serverPassword">Password</string>
    <string name="preference_serverPassword_key">serverPassword</string>
    <string name="preference_mapMatchingShowMap">Show Map</string>
    <string name="preference_mapMatchingShowMap_key">showMap</string>
    <string name="preference_mapMatchingShowMap_default">true</string>
    <string name="preference_mapMatchingShowMap_summary">Enable to show the Map.</string>
    <string name="preference_mapMatchingShowGpsPoints">Show GPS Positions</string>
    <string name="preference_mapMatchingShowGpsPoints_key">showGpsPoints</string>
    <string name="preference_mapMatchingShowGpsPoints_default">true</string>
    <string name="preference_mapMatchingShowGpsPoints_summary">Enable to show received GPS positions on Map.</string>
    <string name="preference_mapMatchingMatchFootways">Match Footways</string>
    <string name="preference_mapMatchingMatchFootways_key">matchFootways</string>
    <string name="preference_mapMatchingMatchFootways_default">false</string>
    <string name="preference_mapMatchingMatchFootways_summary">Enable to include paths like footways, steps, cycleways etc. in Map Matching. Disable to match position only to roads. Footways should be disabled if they are not needed to improve performance and results.</string>
    <string name="preference_mapMatchingNoOneWay">No One-Way Roads/Paths</string>
    <string name="preference_mapMatchingNoOneWay_key">noOneWay</string>
    <string name="preference_mapMatchingNoOneWay_default">false</string>
    <string name="preference_mapMatchingNoOneWay_summary">Enable to enter one-way roads or one-way paths from both directions.</string>
    <string name="preference_resultTime">UTC Time</string>
    <string name="preference_resultTime_key">resultTime</string>
    <string name="preference_resultTime_default">false</string>
    <string name="preference_resultTime_summary">Enable to use UTC time instead of local time.</string>
    <string name="preference_resultLocalMode">Local Mode</string>
    <string name="preference_resultLocalMode_key">localMode</string>
    <string name="preference_resultLocalMode_default">false</string>
    <string name="preference_resultLocalMode_summary">Enable to save symbolic trajectories as text file on your mobile device. No results will be transmitted to Secondo. File will be saved when Map Matching stops.</string>
    <string name="preference_resultMovementData">Transmit Movement Data</string>
    <string name="preference_resultMovementData_key">movementData</string>
    <string name="preference_resultMovementData_default">true</string>
    <string name="preference_resultMovementData_summary">Enable to transmit movement data to Secondo. Movement data will be transmitted when Map Matching stops.</string>
    <string name="preference_resultDirectTransmission">Direct Transmission</string>
    <string name="preference_resultDirectTransmission_key">directTransmission</string>
    <string name="preference_resultDirectTransmission_default">false</string>
    <string name="preference_resultDirectTransmission_summary">Enable to send symbolic trajectories to Secondo while Map Matching. Disable to send symbolic trajectories when Map Matching stops.</string>
    <string name="preference_resultStreetname">Transmit Streetnames</string>
    <string name="preference_resultStreetname_key">streetname</string>
    <string name="preference_resultStreetname_default">true</string>
    <string name="preference_resultStreetname_summary">Enable to transmit symbolic trajectories using streetnames to Secondo.</string>
    <string name="preference_resultCardinalDirection">Transmit Cardinal Directions</string>
    <string name="preference_resultCardinalDirection_key">cardinalDirection</string>
    <string name="preference_resultCardinalDirection_default">true</string>
    <string name="preference_resultCardinalDirection_summary">Enable to transmit symbolic trajectories using cardinal directions to Secondo.</string>
    <string name="preference_resultSpeed">Transmit Speed Profile</string>
    <string name="preference_resultSpeed_key">speed</string>
    <string name="preference_resultSpeed_default">true</string>
    <string name="preference_resultSpeed_summary">Enable to transmit symbolic trajectories using speed information to Secondo.</string>
    <string name="preference_resultHeight">Transmit Height Profile</string>
    <string name="preference_resultHeight_key">height</string>
    <string name="preference_resultHeight_default">true</string>
    <string name="preference_resultHeight_summary">Enable to transmit symbolic trajectories using height above sea level information to Secondo.</string>
    <string name="preference_gpsReset">Reset to Defaults</string>
    <string name="preference_gpsReset_key">gpsReset</string>
    <string name="preference_gpsReset_summary">Reset all GPS Settings to default values.</string>
    <string name="preference_gpsFirstLocation">Skip First Location Point</string>
    <string name="preference_gpsFirstLocation_key">firstLocation</string>
    <string name="preference_gpsFirstLocation_default">true</string>
    <string name="preference_gpsFirstLocation_summary">Enable to skip first Location Point measured by (re)initialized GPS. First Point can have inaccurate Direction value. (Default = enabled)</string>
    <string name="preference_gpsUpdateRate">Update Rate</string>
    <string name="preference_gpsUpdateRate_key">updateRate</string>
    <string name="preference_gpsUpdateRate_default">2500</string>
    <string name="preference_gpsUpdateRate_summary">Minimal time passed between two processed Gps-Positions in milliseconds. (Default = 2500)</string>
    <string name="preference_gpsUpdateDistance">Update Distance</string>
    <string name="preference_gpsUpdateDistance_key">updateDistance</string>
    <string name="preference_gpsUpdateDistance_default">25</string>
    <string name="preference_gpsUpdateDistance_summary">Minimal distance between two processed Gps-Positions in meters. (Default = 25)</string>
    <string name="preference_gpsAccuracy">Minimal Accuracy</string>
    <string name="preference_gpsAccuracy_key">accuracy</string>
    <string name="preference_gpsAccuracy_default">20</string>
    <string name="preference_gpsAccuracy_summary">Minimal allowed probable accuracy for processing a Gps-Position in meters. (Default = 20)</string>
    <string name="preference_gpsSatUsed">Minimal Satellites</string>
    <string name="preference_gpsSatUsed_key">satUsed</string>
    <string name="preference_gpsSatUsed_default">2</string>
    <string name="preference_gpsSatUsed_summary">Minimal allowed count of Satellites used to determine a Gps-Position which is processed. (Default = 2)</string>
    <string name="preference_gpsMaxPdop">Maximal PDOP</string>
    <string name="preference_gpsMaxPdop_key">maxPdop</string>
    <string name="preference_gpsMaxPdop_default">7</string>
    <string name="preference_gpsMaxPdop_summary">Maximal allowed Positional DOP for processing a Gps-Position. (Default = 7)</string>
    <string name="preference_gpsMaxHdop">Maximal HDOP</string>
    <string name="preference_gpsMaxHdop_key">maxHdop</string>
    <string name="preference_gpsMaxHdop_default">7</string>
    <string name="preference_gpsMaxHdop_summary">Maximal allowed Horizontal DOP for processing a Gps-Position. (Default = 7)</string>
    <string name="preference_gpsMaxVdop">Maximal VDOP</string>
    <string name="preference_gpsMaxVdop_key">maxVdop</string>
    <string name="preference_gpsMaxVdop_default">7</string>
    <string name="preference_gpsMaxVdop_summary">Maximal allowed Vertical DOP for processing a Gps-Position. (Default = 7)</string>
</resources>