<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preferenceCategory_map">
        <CheckBoxPreference
            android:defaultValue="@string/preference_mapMatchingShowMap_default"
            android:key="@string/preference_mapMatchingShowMap_key"
            android:summary="@string/preference_mapMatchingShowMap_summary"
            android:title="@string/preference_mapMatchingShowMap" />
        <CheckBoxPreference
            android:defaultValue="@string/preference_mapMatchingShowGpsPoints_default"
            android:key="@string/preference_mapMatchingShowGpsPoints_key"
            android:summary="@string/preference_mapMatchingShowGpsPoints_summary"
            android:title="@string/preference_mapMatchingShowGpsPoints" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferenceCategory_mapMatching">
        <CheckBoxPreference
            android:defaultValue="@string/preference_mapMatchingMatchFootways_default"
            android:key="@string/preference_mapMatchingMatchFootways_key"
            android:summary="@string/preference_mapMatchingMatchFootways_summary"
            android:title="@string/preference_mapMatchingMatchFootways" />
        <CheckBoxPreference
            android:defaultValue="@string/preference_mapMatchingNoOneWay_default"
            android:key="@string/preference_mapMatchingNoOneWay_key"
            android:summary="@string/preference_mapMatchingNoOneWay_summary"
            android:title="@string/preference_mapMatchingNoOneWay" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferenceCategory_results">
        <CheckBoxPreference
            android:defaultValue="@string/preference_resultTime_default"
            android:key="@string/preference_resultTime_key"
            android:summary="@string/preference_resultTime_summary"
            android:title="@string/preference_resultTime" />
        <CheckBoxPreference
            android:defaultValue="@string/preference_resultLocalMode_default"
            android:key="@string/preference_resultLocalMode_key"
            android:summary="@string/preference_resultLocalMode_summary"
            android:title="@string/preference_resultLocalMode" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferenceCategory_movementData">
        <CheckBoxPreference
            android:defaultValue="@string/preference_resultMovementData_default"
            android:key="@string/preference_resultMovementData_key"
            android:summary="@string/preference_resultMovementData_summary"
            android:title="@string/preference_resultMovementData" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferenceCategory_symbolicTrajectories">
        <CheckBoxPreference
            android:defaultValue="@string/preference_resultDirectTransmission_default"
            android:key="@string/preference_resultDirectTransmission_key"
            android:summary="@string/preference_resultDirectTransmission_summary"
            android:title="@string/preference_resultDirectTransmission" />
        <CheckBoxPreference
            android:defaultValue="@string/preference_resultStreetname_default"
            android:key="@string/preference_resultStreetname_key"
            android:summary="@string/preference_resultStreetname_summary"
            android:title="@string/preference_resultStreetname" />
        <CheckBoxPreference
            android:defaultValue="@string/preference_resultCardinalDirection_default"
            android:key="@string/preference_resultCardinalDirection_key"
            android:summary="@string/preference_resultCardinalDirection_summary"
            android:title="@string/preference_resultCardinalDirection" />
        <CheckBoxPreference
            android:defaultValue="@string/preference_resultSpeed_default"
            android:key="@string/preference_resultSpeed_key"
            android:summary="@string/preference_resultSpeed_summary"
            android:title="@string/preference_resultSpeed" />
        <CheckBoxPreference
            android:defaultValue="@string/preference_resultHeight_default"
            android:key="@string/preference_resultHeight_key"
            android:summary="@string/preference_resultHeight_summary"
            android:title="@string/preference_resultHeight" />
    </PreferenceCategory>
</PreferenceScreen>