<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferenceCategory_gpsReset">
        <Preference
            android:key="@string/preference_gpsReset_key"
            android:title="@string/preference_gpsReset"
            android:summary="@string/preference_gpsReset_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferenceCategory_gpsFirstLocation">
        <CheckBoxPreference
            android:defaultValue="@string/preference_gpsFirstLocation_default"
            android:key="@string/preference_gpsFirstLocation_key"
            android:summary="@string/preference_gpsFirstLocation_summary"
            android:title="@string/preference_gpsFirstLocation" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferenceCategory_gps">
        <EditTextPreference
            android:defaultValue="@string/preference_gpsUpdateRate_default"
            android:key="@string/preference_gpsUpdateRate_key"
            android:singleLine="true"
            android:inputType="number"
            android:summary="@string/preference_gpsUpdateRate_summary"
            android:title="@string/preference_gpsUpdateRate" />
        <EditTextPreference
            android:defaultValue="@string/preference_gpsUpdateDistance_default"
            android:key="@string/preference_gpsUpdateDistance_key"
            android:singleLine="true"
            android:inputType="number"
            android:summary="@string/preference_gpsUpdateDistance_summary"
            android:title="@string/preference_gpsUpdateDistance" />
        <EditTextPreference
            android:defaultValue="@string/preference_gpsAccuracy_default"
            android:key="@string/preference_gpsAccuracy_key"
            android:singleLine="true"
            android:inputType="number"
            android:summary="@string/preference_gpsAccuracy_summary"
            android:title="@string/preference_gpsAccuracy" />
        <EditTextPreference
            android:defaultValue="@string/preference_gpsSatUsed_default"
            android:key="@string/preference_gpsSatUsed_key"
            android:singleLine="true"
            android:inputType="number"
            android:summary="@string/preference_gpsSatUsed_summary"
            android:title="@string/preference_gpsSatUsed" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferenceCategory_gpsDop">
        <EditTextPreference
            android:defaultValue="@string/preference_gpsMaxPdop_default"
            android:key="@string/preference_gpsMaxPdop_key"
            android:singleLine="true"
            android:inputType="number"
            android:summary="@string/preference_gpsMaxPdop_summary"
            android:title="@string/preference_gpsMaxPdop" />
        <EditTextPreference
            android:defaultValue="@string/preference_gpsMaxHdop_default"
            android:key="@string/preference_gpsMaxHdop_key"
            android:singleLine="true"
            android:inputType="number"
            android:summary="@string/preference_gpsMaxHdop_summary"
            android:title="@string/preference_gpsMaxHdop" />
        <EditTextPreference
            android:defaultValue="@string/preference_gpsMaxVdop_default"
            android:key="@string/preference_gpsMaxVdop_key"
            android:singleLine="true"
            android:inputType="number"
            android:summary="@string/preference_gpsMaxVdop_summary"
            android:title="@string/preference_gpsMaxVdop" />
    </PreferenceCategory>
</PreferenceScreen>